@@ -24,6 +24,8 @@ python-apt (0.8.1) UNRELEASED; urgency=low
     - packages in marked_install state can also be auto-removable
   * add concept of "ParentComponent" for e.g. ubuntu/multiverse
     that needs universe enabled as well (plus add test)
+  * apt/progress/gtk2.py:
+    - update to the latest vte API for child-exited (LP: #865388)
 
  -- Julian Andres Klode <jak@debian.org>  Tue, 07 Jun 2011 14:00:22 +0200
 
